--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "immutable": ">=3.0.0",
     "jasmine": "^2.7.0"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "immutable": ">=3.0.0"
   }
 }
